<resources>
    <string name="app_name">Calendar View</string>
    <string name="current_data">JUN 2017</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="sunday">周日</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
</resources>
